# emergent-factorization-engine

./: .coverage  .gitignore  CHANGELOG.md  README.md  REVIEW_RESPONSE.md  pyproject.toml  pytest.ini  session-ses_4924.md
.snapshots/: snapshot-2025-12-06-06_30_17.md
docs/: GOAL.md  IMPLEMENTATION_CODEX.md  LEVIN_ALIGNMENT_GAPS.md  META_CELLS.md  QReferences(Bibliography).csv  TEST_SETUP.md  Z5D_INTEGRATION.md  checkpoint.md
experiments/bit_ratio_falsification/: FINDINGS.md  README.md  TASK_SUMMARY.md  experiment_results.json  experiment_runner.py  visual_comparison.py
experiments/corridor_width_ablation/: __init__.py  experiment.py  visualize_results.ipynb
experiments/corridor_width_ablation/results/: ablation_1766887369040.json  ablation_1766887369040_summary.txt
experiments/emergent_doom_engine/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  pom.xml
experiments/emergent_vs_baseline/: README.md  RESULTS.md  ablation_summary.json  parse_logs.py  run_ablation.py  smoke_test.py  visualize_ablation.ipynb
experiments/emergent_vs_baseline/figures/: .gitkeep
src/cellview/cli/: __init__.py  run_cellview.py
src/cellview/data/: __init__.py  challenge_ladder.yaml
src/cellview/engine/: engine.py
src/cellview/metrics/: __init__.py  corridor.py  corridor_metrics.py
src/cellview/utils/: corridors.py  ladder.py  rng.py
tests/: parse_logs.py  summary.csv  test_bit_ratio.py  test_corridor_ablation_experiment.py  test_corridor_metrics.py  test_ladder.py  test_z5d_predictor.py
tests/logs/: ablation_G020_BAL.json  ablation_G025_BAL.json  ablation_G030_BAL.json
(+38 files in other folders)
