[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emergent-factorization-engine"
version = "0.1.0"
description = "Cell-view emergence engine and heuristics developed for the geofac challenge."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mpmath>=1.3",
]

[project.scripts]
cellview = "cellview.cli.run_cellview:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cellview*"]

[tool.setuptools.package-data]
"cellview.data" = ["validation_ladder.yaml", "challenge_ladder.yaml"]
